--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sajid Hasan</title>
 </head>
 <body style="background-color: #f8f8f8;">
     <div style="margin-left: 200px;margin-right: 200px;margin-top: 100px;">
