--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div style="margin-left: 200px;margin-right: 200px;margin-top: 100px;">
         <h5 style="font-size: 20.25px;">mfts.io </h5>
         <br>
-        <h1 style="font-size: 45px;"> <u> Hi, I'm Marc </u> </h1> 
+        <h1 style="font-size: 45px;"> <u> Hi, I'm Sajid </u> </h1> 
              <!---->
         <p style="font-size: 18px;"> ....and I work for next generation of makers. </p>
     
